# retailer

./: .clippy.toml  .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  rustfmt.toml
docker/prometheus/: config.yml
retailer-cart/: Cargo.toml
retailer-cart/src/: main.rs
retailer-catalog/: Cargo.toml
retailer-catalog/src/: main.rs
retailer-notifications/: Cargo.toml
retailer-notifications/src/: main.rs
retailer-orders/: Cargo.toml
retailer-orders/src/: main.rs
retailer-payments/: Cargo.toml
retailer-payments/src/: main.rs
retailer-users/: Cargo.toml
retailer-users/src/: main.rs
