[workspace]
members = [
    "retailer-cart",
    "retailer-catalog",
    "retailer-notifications",
    "retailer-orders",
    "retailer-payments",
    "retailer-users",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "./README.md"
authors = ["vvylym <235853469+vvylym@users.noreply.github.com>"]
repository = "https://github.com/vvylym/retailer"
homepage = "https://github.com/vvylym/retailer"
keywords = ["e-commerce", "retail", "product", "rust"]
categories = ["backend", "e-commerce", "microservices"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
